base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawio
spec:
  selector:
    app: drawio
  ports:
    - port: 80
      targetPort: 8080
